Add resilience to search requests
* Add basic retry and sync on missing index

* Fix ingest plugin checking

* Fix caching of es ingest error